Code: Train event-CNN with phi-shifting datasets and apply it on ZZ4l events

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -2189,6 +2189,96 @@
     "plt.savefig('../figures/event_CNN_AUC-true_L.pdf', dpi=300, facecolor='White', bbox_inches='tight')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to \\gamma\\gamma$ channel with luminosity 100 $\\text{fb}^{-1}$ without decay product + $\\phi$ shifting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-31' and time < '2025-08-01'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1\n",
+      "ACC: 0.627 ± 0.028\n",
+      "AUC: 0.601 ± 0.066\n",
+      "True ACC and AUC\n",
+      "ACC: 0.617 ± 0.064\n",
+      "AUC: 0.655 ± 0.093\n",
+      "$0.627 \\pm 0.028$ & $0.601 \\pm 0.066$ & $0.617 \\pm 0.064$ & $0.655 \\pm 0.093$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +5\n",
+      "ACC: 0.623 ± 0.017\n",
+      "AUC: 0.621 ± 0.036\n",
+      "True ACC and AUC\n",
+      "ACC: 0.657 ± 0.019\n",
+      "AUC: 0.709 ± 0.024\n",
+      "$0.623 \\pm 0.017$ & $0.621 \\pm 0.036$ & $0.657 \\pm 0.019$ & $0.709 \\pm 0.024$\n",
+      "\n",
+      "quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +10\n",
+      "ACC: 0.627 ± 0.018\n",
+      "AUC: 0.634 ± 0.033\n",
+      "True ACC and AUC\n",
+      "ACC: 0.663 ± 0.011\n",
+      "AUC: 0.718 ± 0.015\n",
+      "$0.627 \\pm 0.018$ & $0.634 \\pm 0.033$ & $0.663 \\pm 0.011$ & $0.718 \\pm 0.015$\n",
+      "\n",
+      "quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +15\n",
+      "ACC: 0.627 ± 0.016\n",
+      "AUC: 0.635 ± 0.034\n",
+      "True ACC and AUC\n",
+      "ACC: 0.660 ± 0.009\n",
+      "AUC: 0.713 ± 0.011\n",
+      "$0.627 \\pm 0.016$ & $0.635 \\pm 0.034$ & $0.660 \\pm 0.009$ & $0.713 \\pm 0.011$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +5'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +10'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +15'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
   }
  ],
  "metadata": {
