--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2669,7 +2669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2808,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2855,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -2909,7 +2909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -3016,7 +3016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -3062,7 +3062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -3208,7 +3208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -3255,7 +3255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -3309,7 +3309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3480,7 +3480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -3845,6 +3845,129 @@
     "        data['model_name'] = f'quark_jet_2_cut_eventCNN_L_{l}_{i:02}'\n",
     "        data['model_structure'] = 'event-CNN'\n",
     "        data['sample_type'] = f'quark jet: = 2, L: {l} fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to \\gamma\\gamma$ channel with luminosity 100 $\\text{fb}^{-1}$ without decay product + $\\phi$ shifting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_5_config_10.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_10_config_10.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_15_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/remove_photon_case_1/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/remove_photon_case_1/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 100\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['decay_channel'] = 'aa'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_L_100_wo_a_case1_phi_aug_{aug}_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1\n",
+    "\n",
+    "i = 1\n",
+    "aug = 10\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/remove_photon_case_1/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/remove_photon_case_1/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 100\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['decay_channel'] = 'aa'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_L_100_wo_a_case1_phi_aug_{aug}_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1\n",
+    "\n",
+    "i = 1\n",
+    "aug = 15\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_100_eventCNN_pT_norm_remove_photon_case1_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/remove_photon_case_1/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/remove_photon_case_1/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 100\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['decay_channel'] = 'aa'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_L_100_wo_a_case1_phi_aug_{aug}_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +{aug}'\n",
     "\n",
     "        json.dump(data, f, indent=4)\n",
     "\n",
