--- a/Note/note.tex
+++ b/Note/note.tex
@@ -1196,6 +1196,26 @@
             \label{fig:eventCNN_AUC_various_L}
         \end{figure}
     % subsection various_training_size_with_event_cnn (end)
+    \subsection{Photon information removed datasets with \texorpdfstring{$\phi$}{phi}-shifting augmentation}% (fold)
+    \label{sub:photon_information_removed_datasets_with_phi_shifting_augmentation}
+        We test the $\phi$-shifting augmentation of the photon information removed case. Here, we consider the luminosity of $\mathcal{L} = \text{100 fb}^{-1}$.
+        
+        Table~\ref{tab:CWoLa_event_CNN_training_results_100_jet_tagging_phi_aug_5_10_15} summarizes the training results using the $2q0g$ dataset with $\phi$-shifting augmentation.
+        \begin{table}[htpb]
+            \centering
+            \caption{Event-CNN training results for the photon-removed dataset with different $\phi$-shifting augmentation sizes. ACC and AUC are averaged over 10 training runs.}
+            \label{tab:CWoLa_event_CNN_training_results_100_jet_tagging_phi_aug_5_10_15}
+            \begin{tabular}{l|cc|cc}
+                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original & $0.627 \pm 0.028$ & $0.601 \pm 0.066$ & $0.617 \pm 0.064$ & $0.655 \pm 0.093$ \\
+                +5       & $0.623 \pm 0.017$ & $0.621 \pm 0.036$ & $0.657 \pm 0.019$ & $0.709 \pm 0.024$ \\
+                +10      & $0.627 \pm 0.018$ & $0.634 \pm 0.033$ & $0.663 \pm 0.011$ & $0.718 \pm 0.015$ \\
+                +15      & $0.627 \pm 0.016$ & $0.635 \pm 0.034$ & $0.660 \pm 0.009$ & $0.713 \pm 0.011$
+            \end{tabular}
+        \end{table}
+        The results show that $\phi$-shifting augmentation improves model performance. The $\phi$-shifting augmentation helps mitigate statistical fluctuations and improve generalization.
+    % subsection photon_information_removed_datasets_with_phi_shifting_augmentation (end)
     \subsection{\texorpdfstring{$H \to ZZ^* \to 4\ell$}{H to ZZ to 4l} channel}% (fold)
     \label{sub:h_to_zz_to_4l_channel}
         We follow the same setup as described in section~\ref{sec:h_to_zz_to_4l_channel}. For CWoLa training, we consider multiple luminosity scenarios. In the case of $\mathcal{L} = \text{3000 fb}^{-1}$, the number of events in the mixed datasets is shown in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet_ZZ4l}.
@@ -1203,7 +1223,7 @@
         The event-CNN training results are summarized in table~\ref{tab:CWoLa_event_CNN_training_results_jet_tagging_ZZ4l_L_3000_30000}. At $\mathcal{L} = \text{3000 fb}^{-1}$, the ACC and AUC are close to 0.5, indicating that the training is nearly ineffective. However, as the training dataset size increases to $\mathcal{L} = \text{30000 fb}^{-1}$, the AUC for the pure dataset improves significantly, reaching values around 0.8. This highlights the importance of dataset size.
         \begin{table}[htpb]
             \centering
-            \caption{Event-CNN training results using datasets corresponding to different luminosities. The $ZZ \to 4\ell$ decay channel is considered, with decay product information included. ACC and AUC are averaged over 10 training runs.}
+            \caption{Event-CNN training results using datasets corresponding to different luminosities. The $ZZ \to 4\ell$ decay channel is considered, with information on the decay products included. ACC and AUC are averaged over 10 training runs.}
             \label{tab:CWoLa_event_CNN_training_results_jet_tagging_ZZ4l_L_3000_30000}
             \begin{tabular}{l|cc|cc}
                                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -1225,7 +1245,25 @@
                 w/o lepton & $0.606 \pm 0.010$ & $0.626 \pm 0.012$ & $0.645 \pm 0.006$ & $0.697 \pm 0.009$
             \end{tabular}
         \end{table}
-        The performance is 10% worse for pure events when lepton information is removed, indicating that some of the discriminative features are removed.
+        The performance is 10\% worse for pure events when lepton information is removed, indicating that some of the discriminative features are removed.
+
+        We apply the event-CNN model trained on the photon-removed $H \to \gamma\gamma$ dataset (from section~\ref{sub:photon_information_removed_datasets_with_phi_shifting_augmentation}) to $H \to ZZ^* \to 4\ell$ events. The evaluation uses the $2q0g$ datasets for both decay channels, and the results are summarized in table~\ref{tab:CWoLa_event_CNN_training_results_100_jet_tagging_phi_aug_5_10_15_remove_photon_ZZ4l}.
+        \begin{table}[htpb]
+            \centering
+            \caption{Event-CNN training results for phton-removed datasets. The classifier is trained on $H \to \gamma\gamma$ and evaluated on both $H \to \gamma\gamma$ and $H \to ZZ^* \to 4\ell$. The ACC and AUC are evaluated based on 10 training.}
+            \label{tab:CWoLa_event_CNN_training_results_100_jet_tagging_phi_aug_5_10_15_remove_photon_ZZ4l}
+            \begin{tabular}{l|cc|cc}
+                         &\multicolumn{2}{c|}{$H\to\gamma\gamma$}&\multicolumn{2}{c}{$H\to ZZ^*\to4\ell$}\\ \hline
+                Datasets & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original & $0.617 \pm 0.061$ & $0.655 \pm 0.089$ & $0.599 \pm 0.041$ & $0.634 \pm 0.056$ \\
+                +5       & $0.663 \pm 0.015$ & $0.717 \pm 0.020$ & $0.634 \pm 0.015$ & $0.677 \pm 0.018$ \\
+                +10      & $0.667 \pm 0.010$ & $0.723 \pm 0.014$ & $0.638 \pm 0.010$ & $0.683 \pm 0.011$ \\
+                +15      & $0.664 \pm 0.009$ & $0.719 \pm 0.010$ & $0.634 \pm 0.006$ & $0.679 \pm 0.009$
+            \end{tabular}
+        \end{table}
+        These results demonstrate the transferability of the event-CNN model across decay channels. The AUC for $ZZ \to 4\ell$ is comparable to that achieved by training directly on $ZZ \to 4\ell$ events at $\mathcal{L} = 30000~\text{fb}^{-1}$.
+
+        This suggests that, by leveraging both dataset augmentation and transfer learning, we can effectively simulate the performance equivalent to having approximately 29900~fb$^{-1}$ of additional data. This approach offers a practical path to improving tagger performance in channels with limited statistics.
     % subsection h_to_zz_to_4l_channel (end)
 % section event_cnn (end)
 
